--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 node_modules/
-.DS_Store
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+.netlify/
 .env
 .env.local
 .env.*.local
+*.log
+.DS_Store
 dist/
 build/
 .cache/
+.parcel-cache/
+.next/
+out/
