--- a/netlify.toml
+++ b/netlify.toml
@@ -1,1 +1,48 @@
-[build]\n  functions = \"netlify/functions\"\n  publish = \".\"\n\n[dev]\n  functions = \"netlify/functions\"\n  command = \"echo 'Dev server running'\"\n  port = 8000\n\n# Environment variables for production (set these in Netlify dashboard)\n# SMTP_HOST = your SMTP server\n# SMTP_PORT = 587 or 465\n# SMTP_USER = your email username  \n# SMTP_PASS = your email password\n# ADMIN_EMAIL = email to receive form submissions\n# OPENAI_API_KEY = your OpenAI API key for chatbot (optional)\n\n[[headers]]\n  for = \"/*\"\n  [headers.values]\n    X-Frame-Options = \"DENY\"\n    X-XSS-Protection = \"1; mode=block\"\n    X-Content-Type-Options = \"nosniff\"\n    Referrer-Policy = \"strict-origin-when-cross-origin\"\n    Cache-Control = \"public, max-age=0, must-revalidate\"\n\n[[headers]]\n  for = \"/images/*\"\n  [headers.values]\n    Cache-Control = \"public, max-age=0, must-revalidate\"\n\n[[headers]]\n  for = \"/*.html\"\n  [headers.values]\n    Cache-Control = \"public, max-age=0, must-revalidate\"\n\n[[headers]]\n  for = \"/css/*\"\n  [headers.values]\n    Cache-Control = \"public, max-age=0, must-revalidate\"\n\n[[headers]]\n  for = \"/js/*\"\n  [headers.values]\n    Cache-Control = \"public, max-age=0, must-revalidate\"\n\n[[plugins]]\n  package = \"netlify-plugin-cache\"\n
+[build]
+  functions = "netlify/functions"
+  publish = "."
+
+[dev]
+  functions = "netlify/functions"
+  command = "echo 'Dev server running'"
+  port = 8000
+
+# Environment variables for production (set these in Netlify dashboard)
+# SMTP_HOST = your SMTP server
+# SMTP_PORT = 587 or 465
+# SMTP_USER = your email username  
+# SMTP_PASS = your email password
+# ADMIN_EMAIL = email to receive form submissions
+# OPENAI_API_KEY = your OpenAI API key for chatbot (optional)
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+    Cache-Control = "public, max-age=0, must-revalidate"
+
+[[headers]]
+  for = "/images/*"
+  [headers.values]
+    Cache-Control = "public, max-age=0, must-revalidate"
+
+[[headers]]
+  for = "/*.html"
+  [headers.values]
+    Cache-Control = "public, max-age=0, must-revalidate"
+
+[[headers]]
+  for = "/css/*"
+  [headers.values]
+    Cache-Control = "public, max-age=0, must-revalidate"
+
+[[headers]]
+  for = "/js/*"
+  [headers.values]
+    Cache-Control = "public, max-age=0, must-revalidate"
+
+[[plugins]]
+  package = "netlify-plugin-cache"
